# santa

./: .gitignore  Dockerfile  README.md  pyproject.toml
.kamal/: secrets
app/: database.py  llm.py  main.py  schema.py  session.py
app/static/css/: style.css
app/templates/: debug_sessions.html  index.html  landing.html  questions.html  results.html
config/: deploy.yml
src/questionnaire/templates/: index.html
