[project]
name = "santa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "santa",
    "itsdangerous>=2.2.0",
    "fastapi-sessions>=0.3.2",
    "uuid>=1.30",
]

[tool.uv.sources]
santa = { workspace = true }
